
<resources>
    <string name="app_name">Teens Run Westchester</string>
    <string name="action_settings">Settings</string>

    <!--Strings for buttons-->
    <string name="attend_practice">Attend Practice</string>
    <string name="cancel_attendance">Cancel Attendance</string>

    <string name="upcoming_practices">Upcoming Practices</string>
    <string name="practice_info">Practice Information</string>
    <string name="title_activity_login">Sign in</string>
    <string name="discover_login">Discover upcoming training sessions</string>
    <string name="training_sign_up">Sign up for training</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."</string>
    <string name="reset_password">Reset Password</string>
    <string name="create_account">Create an Account</string>

    <!--Button color-->
    <color name="button_color">#FFC800</color>

    <!--Strings related to registering-->
    <string name="register_user">Create Account</string>

    <!--Strings related to attending practice-->
    <string name="title_activity_register">Create an account</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="take_attendance">Take Attendance</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="passwords_must_match">Passwords must match</string>
    <string name="attending_users">Attending runners</string>

    <!--Google Maps key-->
    <string name="google_maps_key">ASK_JILLIAN_IS_A_SECREET</string>

    <!--profile strings-->
    <string name="my_practices">My Practices</string>
    <string name="my_profile">My Profile</string>
    <string name="logout">Logout</string>
    <string name="login_with_facebook">Login With Facebook</string>
    <string name="facebook_app_id">ASK_JILLIAN_IS_A_SECREET</string>
    <string name="submit">Submit</string>
    <string name="submitting_attendance">Submitting attendance...</string>
    <string name="no_practices">No upcoming practices</string>
    <string name="title_activity_edit_profile">Edit Profile</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="title_activity_mistakes">MistakesActivity</string>
    <string name="save_changes">Save Changes</string>
    <string name="saving_changes">Saving changes...</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="password_too_short">The password is too short.</string>


</resources>
